# ugdk-sdl

./: CMakeLists.txt  android-sdl2.cmake
SDL/: CMakeLists.txt
SDL/src/core/winrt/: SDL_winrtapp_direct3d.cpp  SDL_winrtapp_direct3d.h
SDL/src/dynapi/: SDL_dynapi.h
WindowsUWP/: .gitignore  SDL-UWP.vcxproj
